# python-project-83

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  amvera.yml  database.sql  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: pyci.yml
page_analyzer/: __init__.py  app.py
page_analyzer/templates/: base.html  index.html  show.html  urls.html
